--- a/_source/src/sass/_globals.scss
+++ b/_source/src/sass/_globals.scss
@@ -110,5 +110,6 @@ body {
 }
 
 img.zoom-click {
+	z-index: 1;
 	cursor: pointer;
 }
